<resources>
    <string name="app_name">ChildB&amp;H</string>
    <string name="login">Login</string>
    <string name="username_or_email">Username or Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="email_address">Email Address</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="type">Type</string>
    <string name="parent">Parent</string>
    <string name="next">Next</string>
    <string name="speciality">Speciality</string>
    <string name="i_have_read_and_agree_the_term_conditions"><![CDATA[I have read and agree the Term & Conditions]]></string>
    <string name="child_name">Child name</string>
    <string name="chile_age">Child age</string>

    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="approve_conditions_first">You have to agree term and conditions first</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="phone">Phone  : </string>
    <string name="email">Email  : </string>
    <string name="employee_id">Emplyee ID :</string>
    <string name="birth_date">Birth date :</string>
    <string name="address">Address :</string>
    <string name="gender">Gender :</string>
    <string name="specialization">Specialization :</string>
    <string name="avaliable_time">Available Time :</string>
    <string name="submit_rating">Submit Rating</string>
    <string name="language">language</string>
    <string name="details">Details :</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="not_available">Not available</string>
    <string name="your_appointment">Your appoinmtent at :</string>
    <string name="submit_appointment">Submit appointment</string>
    <string name="scheduled_appointments">Your scheduled appointments</string>
    <string name="submit">Submit</string>
    <string name="your_schedual">Your Schedule</string>
    <string name="add_schedule">Add Schedule</string>
    <string name="available_day">Available Day</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="create_schedule">Create Schedule</string>
    <string name="your_appointments">Your Appointments</string>
    <string name="select_date_to_show_appointments">Choose date to show your appointments:</string>
    <string name="show">Show</string>
    <string name="parent_name">Parent name</string>
    <string name="date_time">Appointment time</string>
    <string name="no_available_patients">No available patients</string>
    <string name="your_patients">Your patients</string>
    <string name="time">Time</string>
    <string name="day">Day</string>
    <string name="save">Save</string>
    <string name="chat">Chat</string>
    <string name="register">Register</string>
    <string name="you_dont_have_account">You dont have account ?</string>
    <string name="doctor">Doctor</string>
    <string name="name">Name</string>
    <string name="type_valid_email">Type valid email</string>
    <string name="blank_passowrd">Blank password</string>
    <string name="no_result">No result</string>
    <string name="read_more"><![CDATA[read more >>>]]></string>
    <string name="children">Children</string>
    <string name="doctors">Doctors</string>
    <string name="articals">Articals</string>
    <string name="check_intenet_connection">Check intenet connection</string>
    <string name="delete">Delete</string>
    <string name="view_report">View Report</string>
    <string name="add_consultant">Add consultant</string>
    <string name="add_new_child">Add new child</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_photo">Choose Photo</string>
    <string name="information">Information</string>
    <string name="update">Update</string>
    <string name="choose_doctor_from_list">Choose doctor from list</string>
    <string name="type_your_child_problem">Type your child problem</string>
    <string name="your_question_about">Your qwestion about :</string>
    <string name="doctor_answer">Answer from docotor :</string>
    <string name="see_more"><![CDATA[See  more >>>]]></string>
    <string name="see_less"><![CDATA[<<< See less]]></string>
    <string name="do_you_want_to_delete_consultation">Do you want to delete consultation</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="profile">Profile</string>
    <string name="parents">Parents</string>
    <string name="no_change">no change</string>
    <string name="question_about">Question about :</string>
    <string name="questions_need_your_answer">Qwestions need your answer</string>
    <string name="your_answer">Your answer</string>
    <string name="send">Send</string>
    <string name="reply">Reply</string>
</resources>