<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    tools:deviceIds="wear">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@mipmap/buzzel"
        android:layout_gravity="center"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/first_name"
        android:textColor="@color/black"
        android:textAlignment="viewStart"
        android:textSize="18sp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:gravity="center"
        android:inputType="text"
        android:background="@drawable/ic_edittext_border"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginTop="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:id="@+id/firstname"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/last_name"
        android:textColor="@color/black"
        android:textAlignment="viewStart"
        android:textSize="18sp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:gravity="center"
        android:inputType="text"
        android:background="@drawable/ic_edittext_border"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginTop="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:id="@+id/lastname"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textColor="@color/black"
        android:textAlignment="viewStart"
        android:textSize="18sp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:gravity="center"
        android:inputType="text"
        android:background="@drawable/ic_edittext_border"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginTop="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:id="@+id/username"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_address"
        android:textColor="@color/black"
        android:textAlignment="viewStart"
        android:textSize="18sp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:gravity="center"
        android:inputType="textEmailAddress"
        android:background="@drawable/ic_edittext_border"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginTop="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:id="@+id/email"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="@color/black"
        android:textAlignment="viewStart"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:gravity="center"
        android:background="@drawable/ic_edittext_border"
        android:inputType="textPassword"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:textColor="@color/black"
        android:id="@+id/password"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mobile_number"
        android:textColor="@color/black"
        android:textAlignment="viewStart"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:gravity="center"
        android:background="@drawable/ic_edittext_border"
        android:inputType="number"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:textColor="@color/black"
        android:id="@+id/mobileNumber"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/type"
        android:textColor="@color/black"
        android:textAlignment="viewStart"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"/>
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trainer"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_marginStart="16dp"
            android:id="@+id/trainer"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/parent"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_marginStart="16dp"
            android:id="@+id/parent"/>
    </RadioGroup>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_gradient"
        android:text="@string/next"
        android:id="@+id/next"
        android:textSize="16sp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginEnd="96dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        />

</LinearLayout>