<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:deviceIds="wear">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@mipmap/child_helth"
        android:padding="18dp"
        android:layout_gravity="center"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/username_or_email"
        android:textColor="@color/black"
        android:textAlignment="viewStart"
        android:textSize="18sp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="nayel.fares@hotmail.com"
        android:inputType="textEmailAddress"
        android:background="@drawable/ic_edittext_border"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginTop="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:id="@+id/email"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="@color/black"
        android:textAlignment="viewStart"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:background="@drawable/ic_edittext_border"
        android:inputType="textPassword"
        android:textSize="16sp"
        android:text="0987"
        android:layout_marginTop="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:textColor="@color/black"
        android:id="@+id/password"/>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_gradient"
        android:text="@string/login"
        android:id="@+id/login"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginEnd="96dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/you_dont_have_account"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textSize="14sp"
            android:gravity="center"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/register"
            android:text="@string/register"
            android:textStyle="bold"
            android:textColor="#ff0000"
            android:textSize="14sp"
            android:gravity="center"/>
    </LinearLayout>
</LinearLayout>