<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/row"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="start|center"
            android:text="@string/question_about"
            android:textSize="14sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start|center"
            android:textStyle="bold"
            android:text="Ali jasem"
            android:id="@+id/childName"
            android:paddingStart="8dp"
            android:textSize="14sp"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start|center"
        android:textStyle="bold"
        android:text="Ali jasem"
        android:id="@+id/question"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:textSize="14sp"/>
    <TextView
        android:layout_width="70dp"
        android:layout_height="25dp"
        android:layout_gravity="end"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/reply"
        android:textAllCaps="false"
        android:textSize="12sp"
        android:textColor="@color/white"
        android:background="@drawable/button_gradient"
        android:id="@+id/reply"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/addAnswerContainer">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="16dp"
            android:lines="3"
            android:textSize="14sp"
            android:id="@+id/newAnswer"
            android:textColor="@color/black"
            android:hint="@string/your_answer"/>
        <TextView
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/send"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:background="@drawable/button_gradient"
            android:id="@+id/send"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/black"/>
</LinearLayout>