<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".parent.ui.AddConsultant">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="8dp"
        android:textSize="14sp"
        android:textStyle="bold"
        android:text="@string/choose_doctor_from_list" />
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="vertical"
        android:id="@+id/doctorsContent"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="8dp"
        android:textSize="14sp"
        android:textStyle="bold"
        android:text="@string/type_your_child_problem" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:lines="3"
        android:textSize="14sp"
        android:id="@+id/question"
        android:background="@drawable/ic_edittext_border"
        android:layout_margin="16dp"
        android:textStyle="bold"/>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:text="@string/submit"
        android:background="@drawable/button_gradient"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        android:visibility="visible"
        android:textAllCaps="false"
        android:id="@+id/submit"/>
</LinearLayout>