<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    tools:deviceIds="wear">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@mipmap/child_helth"
        android:padding="18dp"
        android:layout_gravity="center"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:textColor="@color/black"
        android:textAlignment="viewStart"
        android:textSize="18sp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:gravity="center"
        android:inputType="text"
        android:background="@drawable/ic_edittext_border"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginTop="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:id="@+id/address"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/speciality"
        android:textColor="@color/black"
        android:textAlignment="viewStart"
        android:textSize="18sp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:gravity="center"
        android:inputType="text"
        android:background="@drawable/ic_edittext_border"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginTop="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:id="@+id/speciality"/>



    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:id="@+id/conditions"
        android:text="@string/i_have_read_and_agree_the_term_conditions"/>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_gradient"
        android:text="@string/register"
        android:id="@+id/register"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginEnd="96dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        />

</LinearLayout>