<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/row"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal">
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="match_parent"
           android:gravity="start|center"
           android:text="@string/your_question_about"
           android:textSize="14sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start|center"
            android:textStyle="bold"
            android:text="Ali jasem"
            android:id="@+id/childName"
            android:paddingStart="8dp"
            android:textSize="14sp"/>

    </LinearLayout>

    <com.borjabravo.readmoretextview.ReadMoreTextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="start|center"
        android:textStyle="bold"
        android:text="Ali jasem"
        android:id="@+id/question"
        app:trimLines="3"
        app:trimMode="trimModeLine"
        app:trimCollapsedText="@string/see_more"
        app:trimExpandedText="@string/see_less"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:textSize="14sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="start|center"
            android:text="@string/doctor_answer"
            android:textSize="14sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start|center"
            android:textStyle="bold"
            android:text="Ali jasem"
            android:id="@+id/doctorName"
            android:paddingStart="8dp"
            android:textSize="14sp"/>

    </LinearLayout>

    <com.borjabravo.readmoretextview.ReadMoreTextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="start|center"
        android:textStyle="bold"
        android:text="Ali jasem"
        android:id="@+id/answer"
        app:trimLines="3"
        app:trimMode="trimModeLine"
        app:trimCollapsedText="@string/see_more"
        app:trimExpandedText="@string/see_less"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:textSize="14sp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/black"/>
</LinearLayout>